@@ -1,8 +1,12 @@
+2007-09-20  Sébastien Sablé  <sable@users.sourceforge.net>
+
+	* Sybase.py: Added a prepare method to Cursor
+
 2007-09-19  Sébastien Sablé  <sable@users.sourceforge.net>
 
-	* Refactoring _cancel_cmd
+	* Sybase.py: Refactoring _cancel_cmd
 
-	* Corrected nextset after refactoring
+	* Sybase.py: Corrected nextset after refactoring
 
 2007-09-18  Sébastien Sablé  <sable@users.sourceforge.net>
 
